# Wordhunt-Game

./: .gitignore  Board.cpp  Board.h  Button.cpp  Button.h  ButtonCustom.cpp  ButtonCustom.h  ButtonRenderer.cpp  ButtonRenderer.h  CMakeCache.txt  CMakeLists.txt  CustomWordList.cpp  CustomWordList.h  DefaultWordScorer.cpp  Dictionary.cpp  Dictionary.h  Dictionary.txt  FileLoader.cpp  Game.cpp  Game.h  GameState.cpp  GameState.h  ISettings.h  MainMenuState.cpp  MainMenuState.h  Makefile  README.md  ScoreBoardScreen.cpp  Settings.cpp  Settings.h  Slider.cpp  Slider.h  Sound.h  State.cpp  State.h  Text.cpp  Text.h  TextRenderer.cpp  WordHunt  WordPointCalc.h  (+12 more)
include/: Board.h  BoardRenderer.h  ButtonRenderer.h  DefaultWordScorer.h  FileLoader.h  Slider.h  Text.h  TextRenderer.h  WordValidator.h  piece.h
src/: Board.cpp  BoardRenderer.cpp  ButtonCustom.cpp  ButtonRenderer.cpp  CustomWordList.cpp  DefaultWordScorer.cpp  Dictionary.cpp  FileLoader.cpp  Settings.cpp  Slider.cpp  State.cpp  Text.cpp  TextRenderer.cpp  WordScoreCalculator.cpp  WordValidator.cpp  piece.cpp
tests/: test.cpp
